tests/reference/asr-structs_03-754fb64.stderr
semantic error: Member 'y' not found in struct
 --> tests/errors/structs_03.py:8:14
  |
8 |     s: S = S(y=2)
  |              ^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
